CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The scheduler could crash when processing a Limit or
	  LimitExcept directive (STR #728)
	- The lpq, lpr, and lp commands did not differentiate
	  between the server being unresponsive and the lack of
	  a default printer (STR #728)
	- The PAM checks in the configure script did not stop
	  after the first match (STR #728)
	- The cups-config man page was incorrectly placed in
	  section 3 (STR #728)
	- The cupstestppd utility did not show a warning message
	  when a PPD file indicated BCP protocol support with
	  PJL (STR #720)
	- The scheduler did not return the correct exit code
	  when startup failed (STR #718)
	- The cupsRasterReadPixels() function checked for
	  EAGAIN, which caused problems on FreeBSD (STR #723)
	- The cupsGetDests() function did not use the current
	  encryption setting (STR #653)
	- The scheduler did not properly parse name-based
	  BrowseRelay directives in the cupsd.conf file (STR
	  #711)
	- The IPP backend now supports the following options in
	  the device URI: encryption, waitjob, and waitprinter
	  (STR #699)
	- The parallel, serial, socket, and USB backends did not
	  return a non-zero exit status when a job failed to
	  print in the middle of sending it (STR #715)
	- Location directives in the cupsd.conf file were
	  case-sensitive for printer and class names, so
	  queue-specific access control was not reliable (STR
	  #700)
	- cupsDoFileRequest() did not handle HTTP continue
	  status messages in all cases, causing sporatic
	  problems with IPP printers from some vendors (STR
	  #716)
	- The rastertodymo driver now supports the Zebra ZPL
	  language (STR #713)
	- The test suite no longer generates a printcap file,
	  which caused problems when testing as the root user
	  (STR #693)
	- The scheduler now updates the accepting state of an
	  implicit class based upon the accepting state of its
	  member printers (STR #697)